# sweat-jar

./: .gitignore  Cargo.toml  Makefile  README.md  SECURITY.md  build-in-docker.sh  build.sh  dev.env.example  measured.txt  package-lock.json  package.json  rust-toolchain.toml  typos.toml
.cargo/: config  config.toml  mutants.toml
.github/workflows/: build.yml  dispatch.yml  manual.yml  measure.yml  mutation.yml  push.yml  test.yml
.zed/: tasks.json
contract/: Cargo.toml  README.md  build-in-docker.sh  build.sh  deploy.sh
contract/.cargo/: config
contract/src/: assert.rs  assertions.rs  claim.rs  common.rs  event.rs  external.rs  ft_interface.rs  ft_receiver.rs  info.rs  integration_test.rs  internal.rs  jar.rs  lib.rs  migration.rs  product.rs  test_utils.rs  tests.rs  withdraw.rs
contract/src/claim/: api.rs  mod.rs  tests.rs  view.rs
contract/src/common/: api.rs  assertions.rs  env.rs  event.rs  mod.rs  test_data.rs  testing.rs  tests.rs  udecimal.rs
contract/src/doc/: charts.rs  mod.rs
contract/src/feature/: ft_interface.rs  ft_receiver.rs  mod.rs
contract/src/feature/account/: api.rs  common.rs  mod.rs  model.rs  view.rs
contract/src/feature/account/tests/: mod.rs  restake.rs  restake_all.rs  score.rs  tests.rs
contract/src/feature/account/verification/: model.rs
contract/src/feature/claim/: api.rs  tests.rs
contract/src/feature/fee/: api.rs  mod.rs  tests.rs
contract/src/feature/penalty/: api.rs  tests.rs
contract/src/feature/product/: api.rs  common.rs  mod.rs  model.rs  tests.rs
contract/src/feature/restake/api/: api.rs  mod.rs  prod.rs  test.rs
contract/src/feature/withdraw/: api.rs  mod.rs  tests.rs
contract/src/fee/: api.rs
contract/src/integration_test/: enum_size.rs  integration_test.rs  mod.rs
contract/src/jar/: api.rs  common.rs  mod.rs  model.rs  model_legacy.rs  model_v1.rs  model_v2.rs  tests.rs  versioned_model.rs  view.rs
contract/src/jar/account/: mod.rs  v1.rs  v2.rs  versioned.rs
contract/src/jar/account_jars/: mod.rs  v1.rs  versioned.rs
contract/src/jar/model/: claim_data.rs  common.rs  legacy.rs  mod.rs  v1.rs  v2.rs  versioned.rs
contract/src/jar/tests/: mod.rs  restake.rs  restake_all.rs  tests.rs
contract/src/jar/verification/: model.rs
contract/src/migration/: account_jars_non_versioned.rs  api.rs  claim_rounding_error.rs  mod.rs  model.rs  near_sdk_5.rs  next_gen_jars.rs  step_jars.rs  tests.rs  v2.rs
contract/src/penalty/: api.rs
contract/src/product/: api.rs  command.rs  dto.rs  helpers.rs  mod.rs  model.rs  tests.rs  view.rs
contract/src/product/model/: common.rs  legacy.rs  mod.rs  v1.rs  v2.rs
contract/src/restake/api/: api.rs  mod.rs  prod.rs  test.rs
contract/src/score/: account_score.rs  api.rs  charts.rs  mod.rs  score_api.rs  tests.rs
contract/src/steps/: api.rs  charts.rs  tests.rs
contract/src/test_builder/: jar_builder.rs  mod.rs  product_builder.rs  test_access.rs  test_builder.rs
contract/src/withdraw/: api.rs  mod.rs  tests.rs  view.rs
docs/: requirements.md
integration-tests/: Cargo.toml
integration-tests/neardev/: dev-account  dev-account.env
integration-tests/src/: claim_detailed.rs  common.rs  context.rs  coverage.rs  fast_forward.rs  ft_contract_interface.rs  happy_flow.rs  jar_contract_extensions.rs  jar_contract_interface.rs  jar_deletion.rs  lib.rs  main.rs  many_jars.rs  migration.rs  premium_product.rs  product.rs  product_actions.rs  restake.rs  state_change.rs  step_jars.rs  tests.rs  withdraw_all.rs  withdraw_fee.rs
integration-tests/src/measure/: after_claim.rs  after_withdraw.rs  batch_penalty.rs  claim.rs  claim_total.rs  measure.rs  mod.rs  outcome_storage.rs  random_element.rs  record_score.rs  register_product.rs  restake.rs  restake_all.rs  stake.rs  top_up.rs  utils.rs  withdraw.rs  withdraw_all.rs
integration-tests/src/migrations/: claim_rounding.rs  defi.rs  enum_size.rs  helpers.rs  legacy_account_migration.rs  mod.rs  new_sdk.rs  product_legacy.rs  recovery.rs  score_jars.rs  state_migration.rs  step_jars.rs  v2.rs
integration-tests/src/testnet/: mod.rs  recovery.rs  score_load.rs  testnet_context.rs  testnet_helpers.rs
model/: Cargo.toml
model/src/: api.rs  base64_string.rs  claimed_amount_view.rs  f64.rs  interest.rs  jar.rs  jar_view.rs  lib.rs  numbers.rs  product.rs  score.rs  signer.rs  udecimal.rs  withdraw.rs  withdraw_view.rs
model/src/account/: v1.rs  versioned.rs
model/src/data/: mod.rs
model/src/data/account/: v1.rs  versioned.rs
model/src/data/claim/: view.rs
model/src/data/deposit/: model.rs
model/src/data/jar/: common.rs  mod.rs  v1.rs  view.rs
model/src/data/product/: common.rs  mod.rs  v1.rs
model/src/data/score/: common.rs  mod.rs
model/src/data/withdraw/: view.rs
model/src/timezone/: mod.rs  timestamps.rs  timezone.rs
model/src/types/: mod.rs  timestamps.rs  timezone.rs  udecimal.rs
neardev/: dev-account  dev-account.env
res/: sweat.wasm  sweat_jar.wasm  sweat_jar_3_4_0.wasm  sweat_jar_abi.json  sweat_jar_abi.zst  sweat_jar_before_rounding.wasm  sweat_jar_commit.wasm  sweat_jar_v2.wasm
res/neardev/: dev-account  dev-account.env
res_test/: sweat_jar_pre_near_sdk_5.wasm
scripts/: build-in-docker-with-coverage.sh  build-in-docker.sh  build-integration.sh  build-reproducible.sh  build-with-coverage.sh  build.sh  check-contract-hash.sh  coverage.sh  deploy-mainnet.sh  deploy-testnet.sh  deploy.sh  lint.sh  measure-coverage.sh  measure.sh  mutation.sh  test_state.sh
