[workspace]

resolver = "2"

default-members = ["contract"]
members = ["model", "contract", "integration-tests"]

[workspace.dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
fake = "2.8.0"
rand = "0.8.5"
futures = "0.3.28"
num-format = "0.4.4"
itertools = "0.12.1"
ed25519-dalek = { version = "2.0.0", features = ["rand_core"] }
base64 = "0.22.0"
sha256 = "1.3.0"
mutants = "0.0.3"

nitka = "0.2.2"
nitka-proc = "0.2.2"

sweat-jar-model = { path = "model" }
sweat-model = { git = "https://github.com/sweatco/sweat-near", rev = "c18483345e4fd7f04ca8e248709281856115cef3" }

near-workspaces = "0.10.0"
#near-self-update-proc = "0.1.1"
near-self-update-proc = { path = "../near-self-update/near-self-update-proc" }

near-sdk = { git = "https://github.com/sweatco/near-sdk-rs", rev = "d5e975e3b224b5758745ab46c25d586a8e0db473" }
near-contract-standards = { git = "https://github.com/sweatco/near-sdk-rs", rev = "d5e975e3b224b5758745ab46c25d586a8e0db473" }
