[workspace]

resolver = "2"

default-members = ["contract"]
members = ["model", "contract", "integration-tests"]

[workspace.dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
fake = "2.8.0"
rand = "0.8.5"
futures = "0.3.28"
num-format = "0.4.4"
ed25519-dalek = { version = "2.0.0", features = ["rand_core"] }
base64 = "0.22.0"
sha256 = "1.3.0"
mutants = "0.0.3"
serde = "1.0"
sha2 = "0.10"

nitka = "0.3.0"
nitka-proc = "0.3.0"

sweat-jar-model = { path = "model" }
sweat-model = { git = "https://github.com/sweatco/sweat-near", rev = "7fc49145026654404310b42efd0d20eb346e7ae2" }

near-workspaces = "0.10.0"
near-self-update-proc = "0.1.2"

near-sdk = "5.1.0"
near-contract-standards = "5.1.0"
