[workspace]

resolver = "2"

default-members = ["contract"]
members = ["model", "contract", "integration-tests"]

[workspace.dependencies]
anyhow = "1.0.75"
fake = "2.8.0"
rand = "0.8.5"
futures = "0.3.28"
num-format = "0.4.4"
ed25519-dalek = { version = "2.0.0", features = ["rand_core"] }
base64 = "0.22.0"
sha256 = "1.3.0"
mutants = "0.0.3"
sha2 = "0.10"
serde = "1.0"
visu = "0.2.4"
crypto-hash = "0.3.4"
itertools = "0.13"
tokio = { version = "1.37", features = ["full"] }
dirs = "5.0"

nitka = "0.4.0"
nitka-proc = "0.4.0"

sweat-jar-model = { path = "model" }
sweat-model = { git = "https://github.com/sweatco/sweat-near", rev = "537ef7d0aa3bf58d87b77a1c9660b2d0299b6c00" }

near-workspaces = "0.10.0"
near-self-update-proc = "0.1.2"

near-sdk = "5.14.0"
near-contract-standards = "5.14.0"

rstest = "0.25.0"

#[patch.crates-io]
#nitka = { path = "../nitka/nitka" }
