[package]
name = "sweat_jar"
version = "3.4.1"
authors = ["Sweat Economy"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["release"]
release = ["sweat-jar-model/release-api"]
integration-test = [
    "sweat-jar-model/release-api",
    "sweat-jar-model/integration-methods",
]
integration-api = ["sweat-jar-model/integration-api"]

[dependencies]
ed25519-dalek = { workspace = true }
mutants = { workspace = true }

near-sdk = { workspace = true, features = ["unit-testing"] }
near-self-update-proc = { workspace = true }
near-contract-standards = { workspace = true }

sweat-jar-model = { workspace = true }

[dev-dependencies]
fake = { workspace = true }
rand = { workspace = true }
sha256 = { workspace = true }
base64 = { workspace = true }
anyhow = { workspace = true }
crypto-hash = { workspace = true }
itertools = { workspace = true }
