[package]
name = "sweat_jar"
version = "4.0.2"
authors = ["Sweat Economy"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["release"]
release = ["sweat-jar-model/release-api"]
integration-test = [
    "sweat-jar-model/release-api",
    "sweat-jar-model/integration-methods",
]
integration-api = ["sweat-jar-model/integration-api"]

[dependencies]
mutants = { workspace = true }

near-sdk = { workspace = true, features = ["unit-testing"] }
near-self-update-proc = { workspace = true }
near-contract-standards = { workspace = true }

sweat-jar-model = { workspace = true }

[dev-dependencies]
fake = { workspace = true }
anyhow = { workspace = true }
itertools = { workspace = true }
sweat-jar-model = { workspace = true, features = ["testing"] }
rstest = "0.25.0"
