[package]
name = "sweat_jar"
version = "4.0.3"
authors = ["Sweat Economy"]
edition = "2021"
repository = "https://github.com/sweatco/sweat-jar"

[lib]
crate-type = ["cdylib"]

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.16.0-rust-1.86.0"
image_digest = "sha256:3220302ebb7036c1942e772810f21edd9381edf9a339983da43487c77fbad488"
passed_env = []
container_build_command = [
    "cargo",
    "near",
    "build",
    "non-reproducible-wasm",
    "--locked",
]

[features]
default = ["release"]
release = ["sweat-jar-model/release-api"]
integration-test = [
    "sweat-jar-model/release-api",
    "sweat-jar-model/integration-methods",
]
integration-api = ["sweat-jar-model/integration-api"]

[dependencies]
mutants = { workspace = true }

near-sdk = { workspace = true, features = ["unit-testing"] }
near-self-update-proc = { workspace = true }
near-contract-standards = { workspace = true }

sweat-jar-model = { workspace = true }

[dev-dependencies]
fake = { workspace = true }
anyhow = { workspace = true }
itertools = { workspace = true }
sweat-jar-model = { workspace = true, features = ["testing"] }
rstest = { workspace = true }
