[package]
name = "integration-tests"
version = "1.0.0"
publish = false
edition = "2021"

[lib]
name = "integration_tests"

[dependencies]
anyhow = { workspace = true }
num-format = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
fake = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }
ed25519-dalek = { workspace = true }
base64 = { workspace = true }
mutants = { workspace = true }

sweat-jar-model = { workspace = true, features = ["integration-test", "integration-methods", "integration-api"] }
sweat-model = { workspace = true, features = ["integration-api"] }
nitka = { workspace = true }
near-workspaces = { workspace = true }

maplit = "1.0"
near-units = "0.2.0"
tokio = { version = "1.18.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
pkg-config = "0.3.1"
