[package]
name = "integration-tests"
version = "1.0.0"
publish = false
edition = "2021"

[lib]
name = "integration_tests"

[dependencies]
anyhow = { workspace = true }
num-format = { workspace = true }
serde = { workspace = true }
fake = { workspace = true }
futures = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true }
mutants = { workspace = true }
dirs = { workspace = true }

sweat-jar-model = { workspace = true, features = [
    "integration-test",
    "integration-methods",
    "integration-api",
    "testing",
] }
sweat-model = { workspace = true, features = ["integration-api"] }

nitka = { workspace = true }
near-workspaces = { workspace = true }
