[package]
name = "sweat-jar-model"
version = "4.0.3"
publish = false
edition = "2021"

[lib]
name = "sweat_jar_model"


[features]
default = []
integration-methods = []
integration-test = ["dep:nitka", "dep:near-workspaces"]
integration-api = ["dep:nitka", "dep:near-workspaces"]
release-api = []
testing = ["dep:rand"]

[dependencies]
near-sdk = { workspace = true }

nitka-proc = { workspace = true }
nitka = { workspace = true, optional = true }

near-workspaces = { workspace = true, optional = true }

ed25519-dalek = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true, optional = true }
sha2 = "0.10.8"

[dev-dependencies]
fake = { workspace = true }
